<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".DriverRegLogActivity">

    <TextView
        android:id="@+id/driverEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/login_for_drivers" />

    <EditText
        android:id="@+id/driverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/driverEnter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/driverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:layout_below="@+id/driverEmail"
        android:layout_marginTop="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signInDriver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        android:background="@color/black"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/logInDriver"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/driverPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:backgroundTint="@null"
        android:background="@color/black"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/notAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInDriver"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/not_with_us_yet" />
</RelativeLayout>